--- a/style.css
+++ b/style.css
@@ -281,7 +281,109 @@ img[alt = "logo"]{
   left: 48%;
 }
 
-/*@ media (max-width: 390px;) {
+@media (device-width < 896px) {
+  *{
+  margin: 0;
+}
+
+.container{
+  height: 13vh;
+  width: 100vw;
+  background-color: maroon;
+  position: fixed;
+  display: flex;
+  align-items: center;
+}
+img[alt = "logo"]{
+  height: 60%;
+  width: 15vw;
+  border-radius: 100%;
+  position: relative;
+  left: 10px;
+}
+.navlinks{
+  /* height: 100%;
+  width: 100vw; */
+  color: #fff;
+  display: flex;
+  /* align-items: center; */
+  font-size: 1rem;
+  position: relative;
+  left: 30px;
+  /* top: 10px; */
+  /* padding: 5px; */
+}
+.navlinks p{
+  display: inline-flex;
+  text-align: center;
+  margin: 5px;
+  font-weight: 600;
+}
+.main-content{
+  height: 85vh;
+  width: 100vw;
+  position: absolute;
+  /* background-color: #ff0; */
+  top: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center
+  
+}
+.cards{
+  height: 30vh;
+  width: 90vw;
+  margin-left: -1%;
+  margin-top: 4%;
+  
+  /* background-color: #00f; */
+
+  
+}
+
+
+
+.cards img{
+  height: 87%;
+}
+.cards p{
+  font-size: 0.8rem;
+  text-align: center;
+  line-height: 1.5rem;
+  margin-top: 2%;
+  opacity: 0.65;
+}
+.cards h2{
+  text-align: center;
+  color: maroon;
+  margin-top: 5%;
+}
+.btn{
+  height:2.5rem ;
+  width: 5.5rem;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:maroon ;
+  text-decoration: none;
+  color: #fff;
+  
+}
+
+.log{
+  position: absolute;
+  top: 20%;
+  left: 23%;
+}
+
+.sign{
+  position: absolute;
+  top: 20%;
+  left: 48%;
+}
+
+@/* media (max-width: 390px;) {
   div{
   font-size: 4rem;
   background-color: green;
