--- a/style.css
+++ b/style.css
@@ -1,73 +1,118 @@
-
-*{
+* {
+  padding: 0;
   margin: 0;
-  font-family: "Monda", sans-serif;
+  font-family: "Inria Sans", sans-serif;
+  z-index: 5;
 }
 
-body{
+body,
+html {
   height: 100svh;
   width: 100svw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
-.nav{
+.nav {
   /* padding: 10px 50px; */
   height: 100px;
-  width: 100%;
+  width: 100svw;
   background-color: maroon;
-  position: sticky;
-  top: 0px;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.hide{
-    display: none;
+
+.hide {
+  display: none;
 }
-img[alt = "logo"]{
+img[alt="logo"] {
   height: 70px;
   width: 70px;
   border-radius: 100%;
   position: relative;
   left: 10px;
 }
-.logo-nav-space{
-    width: 30%;
+.logo-nav-space {
+  width: 30%;
 }
-.navlinks1{
+.navlinks1 {
   display: flex;
   position: fixed;
   left: 40%;
- 
 }
-.navlinks1 .op{
+.navlinks1 .op {
   opacity: 0.8;
   font-weight: 500;
 }
 
-.nv-opt{
+.nv-opt {
   margin-right: 1rem;
   color: #fff;
   font-weight: 700;
 }
-.nv-opt:hover{
+.nv-opt:hover {
   cursor: pointer;
   transition: 0.2s;
-   &:hover{
-    color: #ff0;
-    transition: 0.2s;
-  }
+  color: #ff0;
+  transition: 0.2s;
 }
 
-.navlinks2{
-    display: flex;
+/* ofcanvas styling */
+.offcanvas {
+  display: flex;
+  background-color: maroon;
 }
-.navlinks p{
-  display: inline-flex;
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.offcanvas ul p {
+  color: maroon;
   text-align: center;
-  margin: 5px;
-  font-weight: 600;
 }
-.main-content{
+.offcanvas ul a {
+  height: 2.5rem;
+  width: 90svw;
+  border-radius: 15px;
+  margin-top: 1rem;
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: maroon;
+  text-decoration: none;
+  color: ghostwhite;
+  margin-right: 30px;
+  transition: 0.3s;
+}
+.offcanvas ul a:hover {
+  /* background-color: #c5c4c4; */
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+.navlinks2 {
+  display: flex;
+}
+
+@media (max-width: 770px) {
+  .keyhide {
+    display: none;
+  }
+  .hd {
+    display: block;
+  }
+  .btn-danger {
+    position: absolute;
+    top: 4.8%;
+    left: 80%;
+    transform: scale(1.5);
+  }
+}
+/* main content designing */
+.main-content {
   height: 85vh;
   width: 100vw;
   position: absolute;
@@ -75,35 +120,32 @@ img[alt = "logo"]{
   top: 25%;
   display: flex;
   flex-direction: column;
-
 }
 
-.main-content h1{
+.main-content h1 {
   line-height: 4.3rem;
   font-size: 2.5rem;
   margin-left: 2.5rem;
 }
-.main-content .maroon{
+.main-content .maroon {
   color: maroon;
 }
 
-.main-content img{
-  justify-self: right;
+.main-content img {
   height: 55%;
   width: 30%;
   position: absolute;
-  /* top: 0%; */
+  top: 0%;
   left: 60%;
   border-top-right-radius: 50px;
   border-bottom-left-radius: 50px;
 
-      transition: 0.3s linear;
+  transition: 0.3s linear;
 
-  &:Hover{
-
+  &:hover {
     transform: scale(1.1);
     transition: 0.3s linear;
-  /* border-top-right-radius: 0px;
+    /* border-top-right-radius: 0px;
   border-bottom-left-radius: 0px;
 
     border-bottom-right-radius: 50px;
@@ -111,282 +153,181 @@ img[alt = "logo"]{
   }
 }
 
-.cards{
+.cards {
   height: 30vh;
   width: 90vw;
   margin-left: -1%;
   margin-top: 4%;
-  
-  /* background-color: #00f; */
 
-  
+  /* background-color: #00f; */
 }
 
-
-
-.cards img{
+.cards img {
   height: 87%;
 }
-.cards p{
+.cards p {
   font-size: 0.8rem;
   text-align: center;
   line-height: 1.5rem;
   margin-top: 2%;
   opacity: 0.65;
 }
-.cards h2{
+.cards h2 {
   text-align: center;
   color: maroon;
   margin-top: 5%;
 }
-.btn{
-  height:2.5rem ;
+.btn {
+  height: 2.5rem;
   width: 5.5rem;
   border-radius: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:ghostwhite ;
+  background-color: ghostwhite;
   text-decoration: none;
   color: maroon;
   margin-right: 30px;
   transition: 0.3s;
 }
-.btn:hover{
-    height: 2.7rem;
-    width: 6rem;
-    /* background-color: #c5c4c4; */
-    
-    opacity: 0.8;
-    transition: 0.3s;
+.btn:hover {
+  height: 2.7rem;
+  width: 6rem;
+  /* background-color: #c5c4c4; */
+
+  opacity: 0.8;
+  transition: 0.3s;
 }
 
-.log{
- margin-right:  15px;
+.log {
+  margin-right: 15px;
 }
 
-/* .sign{
-  position: absolute;
-  top: 20%;
-  left: 48%;
-} */
-
-/*@ media (max-width: 390px;) {
-  div{
-  font-size: 4rem;
-  background-color: green;
+.hd {
+  display: none;
+  z-index: 0;
 }
-} */
-
-
-@media (max-width : 360px){
-*{
-  margin: 0;
+.cards {
+  position: static;
+  top: 80%;
 }
 
-.container{
-  height: 13vh;
-  width: 100vw;
-  background-color: maroon;
-  position: fixed;
-  display: flex;
-  align-items: center;
-}
-img[alt = "logo"]{
-  height: 70px;
-  width: 70px;
-  border-radius: 100%;
-  position: relative;
-  left: 10px;
-}
-.navlinks{
-  /* height: 100%;
-  width: 100vw; */
-  color: #fff;
-  display: flex;
-  /* align-items: center; */
-  font-size: 1rem;
-  position: relative;
-  left: 30px;
-  /* top: 10px; */
-  /* padding: 5px; */
-}
-.navlinks p{
-  display: inline-flex;
-  text-align: center;
-  margin: 5px;
-  font-weight: 600;
-}
-.main-content{
-  height: 85vh;
-  width: 100vw;
-  position: absolute;
-  /* background-color: #ff0; */
-  top: 15%;
-  display: flex;
-  flex-direction: column;
-  align-items: center
-  
-}
-.cards{
-  height: 30vh;
-  width: 90vw;
-  margin-left: -1%;
-  margin-top: 4%;
-  
-  /* background-color: #00f; */
+@media (max-width: 770px) {
+  * {
+    margin: 0;
+  }
 
-  
-}
+  .container {
+    height: 13vh;
+    width: 100vw;
+    background-color: maroon;
+    position: fixed;
+    display: flex;
+    align-items: center;
+  }
 
-
-
-.cards img{
-  height: 87%;
-}
-.cards p{
-  font-size: 0.8rem;
-  text-align: center;
-  line-height: 1.5rem;
-  margin-top: 2%;
-  opacity: 0.65;
-}
-.cards h2{
-  text-align: center;
-  color: maroon;
-  margin-top: 5%;
-}
-.btn{
-  height:2.5rem ;
-  width: 5.5rem;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:maroon ;
-  text-decoration: none;
-  color: #fff;
-  
-}
-
-.log{
-  position: absolute;
-  top: 20%;
-  left: 23%;
-}
-
-.sign{
-  position: absolute;
-  top: 20%;
-  left: 48%;
-}
-
-@media (device-width < 896px) {
-  *{
-  margin: 0;
-}
-
-.container{
-  height: 13vh;
-  width: 100vw;
-  background-color: maroon;
-  position: fixed;
-  display: flex;
-  align-items: center;
-}
-img[alt = "logo"]{
+  /* img[alt = "logo"]{
   height: 60%;
   width: 15vw;
   border-radius: 100%;
   position: relative;
   left: 10px;
-}
-.navlinks{
-  /* height: 100%;
+} */
+  .navlinks1 {
+    /* height: 100%;
   width: 100vw; */
-  color: #fff;
-  display: flex;
-  /* align-items: center; */
-  font-size: 1rem;
-  position: relative;
-  left: 30px;
-  /* top: 10px; */
-  /* padding: 5px; */
-}
-.navlinks p{
-  display: inline-flex;
-  text-align: center;
-  margin: 5px;
-  font-weight: 600;
-}
-.main-content{
-  height: 85vh;
-  width: 100vw;
-  position: absolute;
-  /* background-color: #ff0; */
-  top: 15%;
-  display: flex;
-  flex-direction: column;
-  align-items: center
-  
-}
-.cards{
-  height: 30vh;
-  width: 90vw;
-  margin-left: -1%;
-  margin-top: 4%;
-  
-  /* background-color: #00f; */
+    color: #fff;
+    display: flex;
+    /* align-items: center; */
+    font-size: 1rem;
+    position: relative;
+    left: 30px;
+    /* top: 10px; */
+    /* padding: 5px; */
+  }
+  .navlinks1 .nv-opt {
+    display: inline-flex;
+    text-align: center;
+    margin: 5px;
+    font-weight: 600;
+  }
+  .main-content {
+    height: 85vh;
+    width: 100vw;
+    position: absolute;
+    /* background-color: #ff0; */
+    top: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-  
-}
+  .main-content img {
+    opacity: 0.4;
+    z-index: 0;
+    width: 70vw;
+    left: 10%;
+    top: 20%;
+    display: none;
+  }
 
+  .btn {
+    height: 2.5rem;
+    width: 5.5rem;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    text-decoration: none;
+    color: maroon;
+  }
 
+  .keyhide {
+    display: none;
+  }
+  .hd {
+    display: block;
+  }
 
-.cards img{
-  height: 87%;
-}
-.cards p{
-  font-size: 0.8rem;
-  text-align: center;
-  line-height: 1.5rem;
-  margin-top: 2%;
-  opacity: 0.65;
-}
-.cards h2{
-  text-align: center;
-  color: maroon;
-  margin-top: 5%;
-}
-.btn{
-  height:2.5rem ;
-  width: 5.5rem;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:maroon ;
-  text-decoration: none;
-  color: #fff;
-  
-}
+  .log {
+    position: absolute;
+    top: 100%;
+    left: 23%;
+  }
 
-.log{
-  position: absolute;
-  top: 20%;
-  left: 23%;
-}
+  .sign {
+    position: absolute;
+    /* top: 100%; */
+    left: 48%;
+  }
 
-.sign{
-  position: absolute;
-  top: 20%;
-  left: 48%;
-}
-
-@/* media (max-width: 390px;) {
+  /* media (max-width: 390px;) {
   div{
   font-size: 4rem;
   background-color: green;
 }
 } */
+}
+
+@media (max-height: 360px) {
+  .log {
+    display: none;
+  }
+  .main-content h1 {
+    line-height: 2.7rem;
+    font-size: 1.5rem;
+    margin-top: 5%;
+  }
+
+  .forcefiximg {
+    margin-top: -20%;
+  }
+  .main-content img {
+    opacity: 0.4;
+    z-index: 0;
+
+    left: 30%;
+    top: 20%;
+  }
 }
